[package]
name = "kvs"
version = "0.1.0"
authors = ["raptazure <hermit0x9@outlook.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
clap = "2.33.1"
structopt = "0.3"
tempfile = "3.0.7"
walkdir = "2.2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.8 "
criterion = "0.2.11"
rand = "0.6.5"
log = "0.46"