[package]
name = "kvs"
version = "0.1.0"
authors = ["raptazure <hermit0x9@outlook.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.0"
clap = "2.33.1"
structopt = "0.3"
tempfile = "3.1.0"
walkdir = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.8 "
criterion = "0.3.3"
rand = "0.5.1"
log = "0.4.11"
sled = "0.34.6"
env_logger = "0.8.2"

[[bench]]
name = "engine_bench"
harness = false