[package]
name = "kvs"
version = "0.1.0"
authors = ["raptazure <hermit0x9@outlook.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
structopt = "0.3"
tempfile = "3.1.0"
walkdir = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.8 "
log = "0.4.11"
sled = "0.34.6"
env_logger = "0.8.2"
crossbeam = "0.8.0"
rayon = "1.5.0"
num_cpus = "1.13.0"
crossbeam-skiplist = { version = "0.0.0", git = "https://github.com/crossbeam-rs/crossbeam.git", rev = "8cc906b" }

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.0"
criterion = "0.3.3"
crossbeam-utils = "0.8.1"
rand = "0.5.1"
tempfile = "3.1.0"
walkdir = "2.3.1"
panic-control = "0.1.4"

[[bench]]
name = "engine_bench"
harness = false